--- a/src/components/global/LayoutGeneral/LayoutGeneral.astro
+++ b/src/components/global/LayoutGeneral/LayoutGeneral.astro
@@ -2,7 +2,7 @@
 import Layout from "../Layout/Layout.astro";
 import { Header } from "../Header";
 import { Footer } from "../Footer";
-const pathTitle = "Minoxidil Kirkland España - Tratamiento Anti-Caída | FDA Aprobado"
+const pathTitle = "La feria del aseo"
 ---
 
 <Layout title={pathTitle}>
