--- a/src/components/global/LayoutGeneral/LayoutGeneral.astro
+++ b/src/components/global/LayoutGeneral/LayoutGeneral.astro
@@ -2,7 +2,7 @@
 import Layout from "../Layout/Layout.astro";
 import { Header } from "../Header";
 import { Footer } from "../Footer";
-const pathTitle = "Mile puntadas"
+const pathTitle = "The house exclusive";
 ---
 
 <Layout title={pathTitle}>
